# fcc-da-mean-var-std

./: .dir-locals.el  .gitignore  main.py  mean_var_std.py  pyproject.toml  requirements.txt  test_module.py
