[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool]

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.poetry]

authors = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
description = "FCC DA Mean Variance Standard Deviation Project"
name = "fcc-da-mean-var-std"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"

[tool.poetry.dev-dependencies]

black = { version = "*", allow-prereleases = true }
isort = "^5.6"
pre-commit = "^2.9"
pytest = "^6.1"
pytest-black = "^0.3"
pytest-cov = "^2.10"
pytest-flake8 = "^1.0"
